welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: ')' expected but ';' found.
  faireLigne(Color.red;Color.cyan); faireLigne2(); setPos(1,2); faireLigne(Color.pink; Color.green)}
                      ^FlowerPot:2: error: ';' expected but ')' found.
  faireLigne(Color.red;Color.cyan); faireLigne2(); setPos(1,2); faireLigne(Color.pink; Color.green)}
                                 ^FlowerPot:2: error: ';' expected but ')' found.
  faireLigne(Color.red;Color.cyan); faireLigne2(); setPos(1,2); faireLigne(Color.pink; Color.green)}
                                                                                                  ^FlowerPot:11: error: ':' expected but '.' found.
def faireLigne(c.color1;c.color2) {
                ^FlowerPot:11: error: identifier expected but ';' found.
def faireLigne(c.color1;c.color2) {
                       ^FlowerPot:11: error: ';' expected but ')' found.
def faireLigne(c.color1;c.color2) {
                                ^